@@ -1,2 +1,2 @@
-#define VERSION "2.5.1"
+#define VERSION "2.6.0"
 #define YEARS   "2005-2010"
